crates/skribble_core/src/css/snapshots/skribble_core__css____tests__css@mixed.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default;
@layer default {
  .pt\:\$0 {
    padding-top: 0px;
  }
  @media screen and (min-width: 1024px) {
    .screen\:lg\:pt\:\$px {
      padding-top: 1px;
    }
  }
  @media (min-width: 640px) {
    .sm\:pt\:\$10 {
      padding-top: 2.5rem;
    }
  }
  @media (min-width: 768px) {
    .md\:pt\:\$px {
      padding-top: 1px;
    }
  }
}

