crates/skribble_core/src/css/snapshots/skribble_core__css____tests__css@normal.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@layer default {
  .pt\:\$0 {
    padding-top: 0px;
  }
}

