crates/skribble_core/src/css/snapshots/skribble_core__css____tests__css@references.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@property --sk-c {
  syntax: "*";
  inherits: true;
  initial-value: inherit;
}
@layer default {
  :root {
    --sk-c: inherit;
  }
  .needs-custom\:\$px {
    --sk-c: ;
  }
  .needs-custom\:\$10 {
    --sk-c: ;
  }
  .needs-custom\:\$10 {
    --some-variable: var(--sk-c);
  }
  .needs-custom\:\$px {
    --some-variable: var(--sk-c);
  }
}

